...
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="TEACH ME" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hmk-Nf-Bgh">
                                <rect key="frame" x="92" y="64" width="230.5" height="51"/>
                                <accessibility key="accessibilityConfiguration" label="teachme"/>
                                <fontDescription key="fontDescription" name="Chalkduster" family="Chalkduster" pointSize="40"/>
                                <color key="textColor" red="1" green="0.99607843139999996" blue="0.97647058819999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
                                <rect key="frame" x="32" y="296" width="350" height="86"/>
                                <subviews>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="email" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="NQk-TI-hVb" customClass="ChalkBoardTextField" customModule="teachMe" customModuleProvider="target">
                                        <rect key="frame" x="0.0" y="0.0" width="350" height="26"/>
                                        <accessibility key="accessibilityConfiguration" identifier="email"/>
...
                                        </constraints>
                                    </view>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="password" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="16s-UW-HUc" customClass="ChalkBoardTextField" customModule="teachMe" customModuleProvider="target">
                                        <rect key="frame" x="0.0" y="48" width="350" height="26"/>
                                        <accessibility key="accessibilityConfiguration" identifier="password"/>
...
                                <rect key="frame" x="23.5" y="412" width="367" height="38"/>
                                <fontDescription key="fontDescription" name="Chalkduster" family="Chalkduster" pointSize="20"/>
                                <state key="normal" title="Don't Have an Account? Tap Here">
                                    <color key="titleColor" red="1" green="0.99607843139999996" blue="0.97647058819999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
...
                            <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IHe-Kl-UBq">
                                <rect key="frame" x="20" y="483.5" width="374" height="30.5"/>
                                <accessibility key="accessibilityConfiguration" label="createAccountErrorLbl"/>
                                <fontDescription key="fontDescription" name="Chalkduster" family="Chalkduster" pointSize="24"/>
                                <color key="textColor" red="0.90980392160000001" green="0.43921568630000002" blue="0.37647058820000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
                                <rect key="frame" x="198" y="214" width="49" height="21"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <accessibility key="accessibilityConfiguration" identifier="profileLbl" label="profileLbl">
                                    <bool key="isElement" value="YES"/>
                                </accessibility>
...
