...
                    <color key="textColor" red="0.95686274509803915" green="0.95686274509803915" blue="0.94117647058823528" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                    <nil key="highlightedColor"/>
                </label>
                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5r5-ZL-YnL">
                    <rect key="frame" x="0.0" y="812" width="414" height="50"/>
                    <color key="backgroundColor" red="0.21568627450980393" green="0.20784313725490194" blue="0.20784313725490194" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                    <accessibility key="accessibilityConfiguration" label="profileLogoutBtn"/>
                    <constraints>
                        <constraint firstAttribute="height" constant="50" id="xcM-cA-FQJ"/>
                    </constraints>
                    <fontDescription key="fontDescription" name="Chalkduster" family="Chalkduster" pointSize="18"/>
                    <state key="normal" title="Logout">
                        <color key="titleColor" red="0.95686274510000002" green="0.95686274510000002" blue="0.94117647059999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
