...
                    <color key="backgroundColor" red="0.2156862745" green="0.20784313730000001" blue="0.20784313730000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                    <accessibility key="accessibilityConfiguration" label="loginBtn"/>
                    <constraints>
                        <constraint firstAttribute="height" constant="50" id="V7x-vZ-lPW"/>
                    </constraints>
                    <fontDescription key="fontDescription" name="Chalkduster" family="Chalkduster" pointSize="20"/>
                    <state key="normal" title="LOGIN">
                        <color key="titleColor" red="1" green="0.99607843139999996" blue="0.97647058819999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                    </state>
                    <connections>
                        <action selector="loginBtn_Pressed:" destination="-1" eventType="touchUpInside" id="lLq-rd-7pR"/>
                    </connections>
                </button>
...
                            <rect key="frame" x="0.0" y="36" width="350" height="2"/>
                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                            <constraints>
                                <constraint firstAttribute="height" constant="2" id="BQT-t6-jeE"/>
                            </constraints>
                        </view>
                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="password" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="8Rb-oa-pu9" customClass="ChalkBoardTextField" customModule="teachMe" customModuleProvider="target">
                            <rect key="frame" x="0.0" y="48" width="350" height="26"/>
                            <accessibility key="accessibilityConfiguration" identifier="password"/>
                            <color key="textColor" red="1" green="0.99607843139999996" blue="0.97647058819999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                            <fontDescription key="fontDescription" name="Chalkduster" family="Chalkduster" pointSize="20"/>
                            <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                        </textField>
...
